# Volvux

./: .gitmodules  CMakeLists.txt  CMakeLists.txt.user.18  CMakeLists.txt.user.3.2-pre1  README.md
cmake/: FindALP.cmake  FindFreeGLUT.cmake  FindGLEW.cmake  FindSmartMotor.cmake
data/objmodels/: helicoid.vert  mws_cncs_001_p003.stp
libs/glew-1.10.0-src/: CMakeLists.txt
src/: ALPProjector.cpp  ALPProjector.h  Arcball.cpp  Arcball.h  CMakeLists.txt  CalibrationHelper.cpp  CalibrationHelper.h  CalibrationWidgetPage.cpp  CalibrationWidgetPage.h  CalibrationWidgetPage.ui  Camera.h  Dummy.cpp  ExtraWindow.cpp  ExtraWindow.h  ExtraWindow.ui  GLUtils.cpp  GLUtils.h  HelicoidPositionShader.vert  HelicoidPositionShader_vert.h  Homography.cpp  Homography.h  Icosphere.cpp  IncludeGL.h  Mathcommon.cpp  Mathcommon.h  ObjLoader.cpp  ObjLoader.h  ObjLoader2.cpp  ObjLoader2.h  ParabolicCylinderShader.vert  ProjectorPage.cpp  ProjectorPage.h  ProjectorPageWidget.cpp  ProjectorPageWidget.h  ProjectorWidgetPage.cpp  ProjectorWidgetPage.h  ProjectorWidgetPage.ui  SMIPageWidget.cpp  SMIPageWidget.h  SettingsWindowWidget.cpp  (+49 more)
src/matlab/: AnamorphicFragmentShader.frag  AnamorphicVertexShader.vert  Draw3DCamera.m  VisualizeCalibration.m  VisualizeHelicoid.m  Volvux.m  ana_symb.m  anamorphicdeform.m  anamorphicdeform2.m  anamorphosis_example.m  cube2frustum.m  decomposePmatrix.m  drawReference.m  drawfrustum.m  flipaxes.m  frustum_explained.m  frustumcorners.m  getCameraIntrinsicExtrinsic.m  getOpenGLMatrices.m  getReflectionMatrix.m  getRotationMatrix.m  glProject.m  glfrustum.m  glortho.m  hnormalized.m  hololab_projection.m  homography.m  ndctopix.m  orthographicFromPerspective.m  orthographicFromPerspective.m~  orthographicprojectionmatrix.m  project.m  projectionmatrix.m  reproductionError.m  rescaleanamorph.m  rq3.m  test_frustum_proj.m  test_homography.m  test_homomat.m  test_ortho  (+9 more)
src/old/: Homography.cpp  Homography.h  VolumetricMeshIntersection.cpp  VolumetricMeshIntersection.h
src/tests/: testALPProjector.cpp  testSMI.cpp
